# easyCuda

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
binds/: export.cpp
csrc/: attn.cu  gemm_sliced_k.cu  gemm_sliced_k_sm80_naive.cu  gemm_sliced_k_sm80_optim.cu  vector_add.cu
easyCuda/: __init__.py  cuda_kernel.py  kernel.py
easyCuda/triton_kernel/: prefillAttn.py
include/: common.h  gemm_sliced_k.h  ops.h  vector_add.h
playground/: aligned_malloc.cpp  visualize_mma_layout.cu
tests/: Attn.py  gemm.py  gemm_sliced_k.py  vectorAdd.py
tests/utils/: basic.py
