[build-system]
requires = [
    "scikit-build-core>=0.10",
    "cmake>=3.22",
    "ninja",
    "wheel",
    # PyTorch构建时依赖 - 不指定CUDA版本标签，通过索引https://download.pytorch.org/whl/cuxxx获取GPU版本
    "torch>=2.5.0",
]
build-backend = "scikit_build_core.build"


[project]
name = "easyCuda"
version = "0.0"
description = "CUDA kernel library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["cuda"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: GPU :: NVIDIA CUDA",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.20.0",
]


[tool.wheel]
exclude = ["dist*", "tests*"]


[tool.scikit-build]
cmake.minimum-version = "3.22"
cmake.verbose = true

cmake.args = ["-DCMAKE_CUDA_ARCHITECTURES=89"]

wheel.packages = ["easyCuda"]
wheel.license-files = ["LICENSE"]

sdist.include = [
    "easyCuda/**/*",
    "LICENSE",
    "README.md",
]

install.components = ["Python"]